fix commingsoon component

--- a/index.html
+++ b/index.html
@@ -32,13 +32,9 @@
     <noscript>
       This is your fallback content in case JavaScript fails to load.
     </noscript>
-    <div id="app">
-      
-    </div>
+    <div id="app" />
     <!-- Todo: only include in production -->
     <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
     <!-- built files will be auto injected -->
-
-   
   </body>
 </html>
