--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <script defer="defer" data-timepad-widget-v2="event_register" data-timepad-customized="40122" src="https://timepad.ru/js/tpwf/loader/min/loader.js">
+      (function() {
+          return {
+              "hidePreloading": true,
+              "display": "popup",
+              "popup": {
+                  "triggerSelector": "#twf"
+              }
+          }
+      })();
+   </script>
   </head>
   <body>
     <noscript>
