--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,400" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
+    <!-- <script type="text/javascript" >
       (function (d, w, c) {
           (w[c] = w[c] || []).push(function() {
               try {
@@ -55,8 +55,8 @@
               d.addEventListener("DOMContentLoaded", f, false);
           } else { f(); }
       })(document, window, "yandex_metrika_callbacks2");
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/50473393" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    </script> -->
+    <!-- <noscript><div><img src="https://mc.yandex.ru/watch/50473393" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
     <!-- /Yandex.Metrika counter -->
     <!-- TimePad widget -->
     <script defer="defer" data-timepad-widget-v2="event_register" data-timepad-customized="40122" src="https://timepad.ru/js/tpwf/loader/min/loader.js">
